Fix dark mode top spacing

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body {
 }
 
 body {
+  display: flow-root;
   line-height: 1.5;
 }
 
